# course-work-pis

./: .gitignore  CLAUDE.md  Product-Requirements-Document
hackflow/: .env.example  README.md  credentials.example.env  docker-compose.yml
hackflow/backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
hackflow/backend/app/: main.py
hackflow/backend/app/api/v1/: __init__.py  admin.py  auth.py  hackathons.py  helpdesk.py  judging.py  matchmaking.py  search.py  teams.py  users.py  winners.py  workspace.py
hackflow/backend/app/core/: config.py  dependencies.py  exceptions.py  rate_limit.py  security.py
hackflow/backend/app/db/: base.py
hackflow/backend/app/db/migrations/: env.py
hackflow/backend/app/db/migrations/versions/: 001_initial_schema.py  002_github_private_repo.py  003_winners_and_card_labels.py
hackflow/backend/app/db/models/: __init__.py  discord_integration.py  evaluation.py  github_stats.py  hackathon.py  helpdesk.py  kanban.py  notification.py  profile.py  submission.py  team.py  user.py  winner.py
hackflow/backend/app/schemas/: __init__.py
hackflow/backend/app/services/: discord_service.py  email_service.py  github_service.py  jitsi_service.py  rag_service.py
hackflow/backend/app/tasks/: deadline_reminders.py
hackflow/backend/app/templates/email/: deadline_reminder.html  mentor_assigned.html  score_published.html  team_invite.html
hackflow/backend/app/websocket/: handlers.py  manager.py
hackflow/docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  INTEGRATIONS.md
(+67 files in other folders)
